data/derived/comb/progs/unify/prog1098.ml.out
Characters 51-54:
  let fixpoint (f,b) = wwhile((let k x = f x != x in k b), b);;
                                                     ^^^
Error: This expression has type bool but an expression was expected of type
         'a -> 'a * bool
